[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "JefferyWang", email = "admin@wangjunfeng.com" }
]
dependencies = [
    "jupyterlab>=4.2.4",
    "pyarrow>=17.0.0",
    "pandas>=2.2.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/notebooks"]
